--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,11 @@
 ---
 @charset "utf-8";
 
-
+@import 'https://fonts.googleapis.com/css?family=Inconsolata|Rasa';
+$title-font-family: "Inconsolata", Helvectica, Arial, sans-serif;
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Rasa", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -49,5 +50,6 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "theme"
 ;
